--- a/Home.html
+++ b/Home.html
@@ -7,11 +7,141 @@
     <title>TravelGood</title>
 
     <!-- link CSS file -->
-    <link rel="stylesheet" href="Main.css">
+    <link rel="stylesheet" href="main.css">
+    <!-- font awsome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 </head>
 <body>
 
+    <!-- navbar -->
+    <nav>
+        <div class="container">
+            <nav-flex>
+                <div class="logo">
+                    <h1><a href="Home.html">TravelGood</a></h1>
+                </div>
 
+                <ul class="menu">
+                    <li>
+                        <form action="">
+                            <input type="text" name="search" placeholder="Find great placce..." required>
+                            <button type="submit" name="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+                        </form>
+                    </li>
+                    <li><a href="About.html"></a>about</li>
+                    <li><a href="Tours.html"></a>Tours</li>
+                    <li><a href="Contact.html"></a>Contact</li>
+                </ul>
+            </nav-flex>
+        </div>
+    </nav>
+
+    <!-- banner -->
+    <section id="banner">
+        <div class="container">
+            <div class="banner-title">
+                <h1>TravelGood</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis deserunt dolores amet sunt sed totam, ex possimus voluptates, suscipit veniam officiis vitae illum reprehenderit aut, nihil est consequatur non quaerat.</p>
+                <a href="" class="banner-btn">View All Tours</a>
+            </div>
+        </div>
+    </section>
+
+    <section id="tours">
+        <div class="container">
+            <div class="tours-title">
+                <h2>Our Best Tours</h2>
+                <p>Explor a different wat to travel</p>
+            </div>
+
+            <div class="tours-flex">
+                <figure class="tours-flex-items">
+                    <img src="img/tours-1.jpg" alt="tours">
+                    <span class="price">$299</span>
+                    <figcaption>
+                        <h3>Islands - 3 Days in Popular</h3>
+                    </figcaption>
+                </figure>
+                <figure class="tours-flex-items">
+                    <img src="img/tours-2.jpg" alt="tours">
+                    <span class="price">$599</span>
+                    <figcaption>
+                        <h3>Islands - 5 Days in Popular</h3>
+                    </figcaption>
+                </figure>
+                <figure class="tours-flex-items">
+                    <img src="img/tours-3.jpg" alt="tours">
+                    <span class="price">$799</span>
+                    <figcaption>
+                        <h3>Islands - 7 Days in Popular</h3>
+                    </figcaption>
+                </figure>
+            </div>
+        </div>
+    </section>
+
+    <!-- Our Clients -->
+    <section id="clients">
+        <div class="container">
+            <div class="clients-title">
+                <h2>Our Clients</h2>
+                <p>Listen what our clients say</p>
+            </div>
+
+            <div class="clients-flex">
+                <figure class="clients-items">
+                    <img src="img/clients-1.jpg" alt="clients">
+                    <figcaption>
+                        <h3>John Legend</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                    </figcaption>
+                </figure>
+                <figure class="clients-items">
+                    <img src="img/clients-2.jpg" alt="clients">
+                    <figcaption>
+                        <h3>John Cena</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                    </figcaption>
+                </figure>
+                <figure class="clients-items">
+                    <img src="img/clients-3.jpg" alt="clients">
+                    <figcaption>
+                        <h3>John Smith</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                    </figcaption>
+                </figure>
+            </div>
+        </div>
+    </section>
+
+    <!-- footer -->
+    <footer>
+        <div class="container">
+            <div class="footer-flex">
+                <div class="footer-items">
+                    <h3>TravelGOOD</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae deserunt totam facere labore veritatis rem, sit magnam sapiente? Corrupti quaerat at animi, totam praesentium architecto tenetur alias beatae impedit numquam.</p>
+                    <p>&copy; 2023. All Rights Reserved.</p>
+                </div>
+                <div class="footer-items">
+                    <h3>Information</h3>
+                    <ul>
+                        <li><i class="fa-solid fa-arrow-right"></i>Lorem, ipsum dolor.</li>
+                        <li><i class="fa-solid fa-arrow-right"></i>Lorem ipsum dolor sit.</li>
+                        <li><i class="fa-solid fa-arrow-right"></i>Lorem ipsum dolor sit amet.</li>
+                        <li><i class="fa-solid fa-arrow-right"></i>Lorem, ipsum.</li>
+                    </ul>
+                </div>
+                <div class="footer-items">
+                    <h3>Contact Us</h3>
+                    <ul>
+                        <li><i class="fa-solid fa-phone"></i> (+66) 99 9999999</li>
+                        <li><i class="fa-solid fa-envelope"></i> travelgood@gmail.com</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
     
 </body>
 </html>
