update code html&css

--- a/Tours.html
+++ b/Tours.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,6 +12,7 @@
     <!-- font awsome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 </head>
+
 <body>
 
     <!-- navbar -->
@@ -36,84 +38,67 @@
         </div>
     </nav>
 
-    <!-- banner -->
-    <section id="banner">
+
+    <!-- Tours -->
+    <section id="tours-list">
         <div class="container">
-            <div class="banner-title">
-                <h1>TravelGood</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis deserunt dolores amet sunt sed totam, ex possimus voluptates, suscipit veniam officiis vitae illum reprehenderit aut, nihil est consequatur non quaerat.</p>
-                <a href="" class="banner-btn">View All Tours</a>
-            </div>
-        </div>
-    </section>
-
-    <!-- tours -->
-    <section id="tours">
-        <div class="container">
-            <div class="tours-title">
-                <h2>Our Best Tours</h2>
-                <p>Explor a different wat to travel</p>
+            <div class="tours-list-title">
+                <h1>Our Toures of the Year</h1>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                </p>
             </div>
 
-            <div class="tours-flex">
-                <figure class="tours-flex-items">
-                    <img src="img/tours-1.jpg" alt="tours">
-                    <span class="price">$299</span>
+            <div class="tours-list-flex">
+                <figure class="tours-list-items">
+                    <img src="img/tours-list-1.jpg" alt="tours">
+                    <span class="tours-list-price">$199</span>
                     <figcaption>
-                        <h3>Islands - 3 Days in Popular</h3>
+                        <h3>Lorem ipsum dolor sit.</h3>
                     </figcaption>
                 </figure>
-                <figure class="tours-flex-items">
-                    <img src="img/tours-2.jpg" alt="tours">
-                    <span class="price">$599</span>
+                <figure class="tours-list-items">
+                    <img src="img/tours-list-2.jpg" alt="tours">
+                    <span class="tours-list-price">$299</span>
                     <figcaption>
-                        <h3>Islands - 5 Days in Popular</h3>
+                        <h3>Lorem ipsum dolor sit.</h3>
                     </figcaption>
                 </figure>
-                <figure class="tours-flex-items">
-                    <img src="img/tours-3.jpg" alt="tours">
-                    <span class="price">$799</span>
+                <figure class="tours-list-items">
+                    <img src="img/tours-list-3.jpg" alt="tours">
+                    <span class="tours-list-price">$399</span>
                     <figcaption>
-                        <h3>Islands - 7 Days in Popular</h3>
+                        <h3>Lorem ipsum dolor sit.</h3>
                     </figcaption>
                 </figure>
             </div>
-        </div>
-    </section>
 
-    <!-- our clients -->
-    <section id="clients">
-        <div class="container">
-            <div class="clients-title">
-                <h2>Our Clients</h2>
-                <p>Listen what our clients say</p>
-            </div>
-
-            <div class="clients-flex">
-                <figure class="clients-items">
-                    <img src="img/clients-1.jpg" alt="clients">
+            <div class="tours-list-flex">
+                <figure class="tours-list-items">
+                    <img src="img/tours-list-4.jpg" alt="tours">
+                    <span class="tours-list-price">$499</span>
                     <figcaption>
-                        <h3>John Legend</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                        <h3>Lorem ipsum dolor sit.</h3>
                     </figcaption>
                 </figure>
-                <figure class="clients-items">
-                    <img src="img/clients-2.jpg" alt="clients">
+                <figure class="tours-list-items">
+                    <img src="img/tours-list-5.jpg" alt="tours">
+                    <span class="tours-list-price">$599</span>
                     <figcaption>
-                        <h3>John Cena</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                        <h3>Lorem ipsum dolor sit.</h3>
                     </figcaption>
                 </figure>
-                <figure class="clients-items">
-                    <img src="img/clients-3.jpg" alt="clients">
+                <figure class="tours-list-items">
+                    <img src="img/tours-list-6.jpg" alt="tours">
+                    <span class="tours-list-price">$699</span>
                     <figcaption>
-                        <h3>John Smith</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                        <h3>Lorem ipsum dolor sit.</h3>
                     </figcaption>
                 </figure>
             </div>
         </div>
     </section>
+
 
     <!-- footer -->
     <footer>
@@ -143,6 +128,7 @@
             </div>
         </div>
     </footer>
-    
+
 </body>
+
 </html>
