--- a/About.html
+++ b/About.html
@@ -38,6 +38,7 @@
         </div>
     </nav>
 
+    <!-- about -->
     <section id="about">
         <div class="container">
             <div class="about-title">
